refactor(backend-spring): migrate from JPA to MyBatis Plus
- Replace JPA repositories with MyBatis Plus mappers
- Add @TableName annotation to all entity classes
- Update service layer to use mapper injection
- Remove repository layer completely
- Add pagination support with PageHelper
- Keep JPA ddl-auto for table creation